<resources>
    <!-- Application Name -->
    <string name="app_name">RockBottom</string>

    <!-- Facebook Login Data-->
    <string name="facebook_app_id">1948907428477566</string>
    <string name="fb_login_protocol_scheme">fb1948907428477566</string>

    <!-- Login String Data -->
    <string name="login_google_txt">구글 아이디로 로그인</string>
    <string name="login_facebook_txt">페이스북 아이디로 로그인</string>
    <string name="login_email_txt">이메일로 가입 또는 로그인</string>
    <string name="login_intro_subject_txt">Subject Name</string>
    <string name="login_intro_content_txt">Content</string>

    <!-- Intro String Data -->
    <string name="intro_subject_first"></string>
    <string name="intro_subject_second">지금 시작하세요</string>
    <string name="intro_subject_third">빠르게 익히세요</string>
    <string name="intro_subject_fourth">꼬셔보세요</string>
    <string name="intro_content_first">만들어 제껴부러</string>
    <string name="intro_content_second">가장 빠른 길은 바로 행동하는 것입니다</string>
    <string name="intro_content_third">개론서 정도의 지식을 머리에 담아보세요</string>
    <string name="intro_content_fourth">알아야 꼬십니다</string>

    <!-- Email Login String Data -->
    <string name ="email_login_email_txt">이메일</string>
    <string name ="email_login_password_explain_txt">비밀번호(영문 숫자 특수문자 8자 이상)</string>
    <string name ="email_login_password_txt">비밀번호</string>
    <string name ="email_login_check_password_txt">비밀번호 확인</string>
    <string name ="email_login_sign_in_txt">로그인</string>
    <string name ="email_login_sign_up_txt">새로운 계정 만들기</string>
    <string name ="email_login_password_find_txt">비밀번호 변경 또는 찾기</string>
    <string name ="email_sign_up_txt">가입하기</string>

    <!-- Input Information String Data -->
    <string name="input_info_yours_txt">여러분의 정보를 입력하고 시작해보세요</string>
    <string name="input_info_selfie_txt">사진</string>
    <string name="input_info_nick_name_txt">닉네임(필수)</string>
    <string name="input_info_message_txt">메세지</string>
    <string name="input_info_team_name_txt">소속</string>
    <string name="input_info_github_txt">GitHub ID(주소가 아닌 ID)</string>
    <string name="input_info_done_txt">완료</string>

    <!-- Main String Data -->
    <string name="main_ranking_bottom_txt">랭킹</string>
    <string name="main_study_bottom_txt">학습</string>
    <string name="main_my_info_bottom_txt">내 정보</string>

    <!-- Ranking String Data -->
    <string name="ranking_ranking_txt">랭킹</string>
    <string name="ranking_priority_txt">랭킹 순위</string>
    <string name="ranking_github_txt">GitHub 놀러가기</string>
    <string name="ranking_points_txt">0pts</string>
    <string name="rnaking_number_txt">0</string>
    <string name="ranking_message_txt">Message</string>
    <string name="ranking_nick_name_txt">Nick Name</string>
    <string name="ranking_team_name_txt">Team Name</string>

    <!-- Study String Data -->
    <string name="study_txt">컴퓨터 공학을 학습하고\n더 깊은 실력을 갖춰보세요</string>
    <string name="study_subject_txt">Subject</string>
    <string name="study_chapter_txt">Chapter</string>
    <string name="study_subject_explain_txt">업데이트 중</string>

    <!-- Learn String Data -->
    <string name="learn_done_txt">공부 끝!</string>
    <string name="learn_later_txt">나중에 공부할래요</string>
    <string name="learn_subject_txt">Subject</string>
    <string name="learn_content_txt">Content</string>

    <!-- My Information String Data -->
    <string name="my_info_profile_txt">프로필</string>
    <string name="my_info_nick_name_txt">닉네임</string>
    <string name="my_info_introduce_txt">Rock Bottom에 오신걸 환영합니다!</string>
    <string name="my_info_message_txt">메세지</string>
    <string name="my_info_team_name_txt">소속</string>
    <string name="my_info_ranking_number_txt">0</string>
    <string name="my_info_point_number_txt">0</string>
    <string name="my_info_point_txt">포인트</string>
    <string name="my_info_ranking_txt">랭킹</string>
    <string name="my_info_etc_txt">기타</string>
    <string name="my_info_study_condition_btn_txt">나의 학습현황</string>
    <string name="my_info_github_btn_txt">나의 Github으로</string>
    <string name="my_info_edit_profile_btn_txt">프로필 수정</string>


    <!-- Study Condition String Data -->
    <string name="study_condition_txt">학습현황</string>
    <string name="study_condition_subject_txt">Subject</string>
    <string name="study_condition_done_all_number_txt">done / all</string>

    <!-- Edit Information String Data -->
    <string name="edit_info_selfie_edit_txt">사진수정</string>
    <string name="edit_info_selfie_delete_txt">사진삭제</string>
    <string name="edit_info_logout_txt">로그아웃</string>
    <string name="edit_info_good_bye_txt">회원탈퇴</string>
    <string name="edit_info_list_title_txt">List Title</string>
    <string name="edit_info_list_content_txt">List Content</string>
    <string name="edit_info_account_settings_txt">계정관리</string>

    <!-- User String Data -->
    <string name="user_nick_name_txt">Nick Name</string>
    <string name="user_message_txt">Message</string>
    <string name="user_team_name_txt">Team</string>
    <string name="user_github_txt">GitHub ID</string>
    <string name="user_point_number_txt">9999</string>
    <string name="user_ranking_number_txt">1111</string>

    <!-- Chapter Dialog String Data -->
    <string name="dialog_learn_txt">학습</string>
    <string name="dialog_quiz_txt">퀴즈</string>
    <string name="dialog_update_done">업데이트 완료!</string>
    <string name="dialog_update_ing">업데이트 중</string>
    <string name="dialog_chapter_back_txt">뒤로가기</string>

    <!-- Input Information Dialog String Data -->
    <string name="dialog_selfie_delete_txt">사진삭제</string>
    <string name="dialog_selfie_back_txt">뒤로가기</string>

    <!-- Edit Information Dialog String Data -->
    <string name="dialog_edit_info_target_txt">대상</string>
    <string name="dialog_edit_info_hint_txt">변경할 정보를 입력해주세요</string>
    <string name="dialog_edit_info_confirm_txt">확인</string>
    <string name="dialog_edit_info_cancel_txt">취소</string>
    <string name="dialog_edit_info_selfie_cancel_txt">뒤로가기</string>
    <string name="dialog_edit_info_progress_txt">검사</string>

    <!-- Account Setting String Data -->
    <string name="account_setting_email">계정 이메일</string>
    <string name="account_setting_email_txt">Email</string>
    <string name="account_setting_password_edit_txt">비밀번호 변경</string>
    <string name="account_setting_logout_txt">로그아웃</string>
    <string name="account_setting_delete_account_txt">회원탈퇴</string>

    <!-- Password Find String Data -->
    <string name="dialog_password_find_confirm_txt">변경 메일 보내기</string>
    <string name="dialog_password_find_cancel_txt">취소</string>
    <string name="dialog_password_find_target_txt">비밀번호 찾기 또는 변경</string>
    <string name="dialog_password_find_edit_hint_txt">가입한 이메일 계정을 입력해주세요</string>

</resources>
