<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/account_setting_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_setting_email"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/account_setting_email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorDarkerGray"
        android:text="@string/account_setting_email_txt"
        android:layout_marginTop="24dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_red_dark"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/account_setting_logout_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_setting_logout_txt"
        android:layout_marginTop="24dp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_red_dark"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/account_setting_delete_account_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_setting_delete_account_txt"
        android:layout_marginTop="24dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_red_dark"
        android:layout_marginTop="24dp"/>

</LinearLayout>