<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/dialog_learn_layout"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:background="@drawable/dialog_custom_edit_info"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_learn_txt"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_quiz_layout"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="16dp"
        android:background="@drawable/dialog_custom_edit_info"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_quiz_txt"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_update_ing" />
    </LinearLayout>

    <TextView
        android:id="@+id/dialog_chapter_back_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_learn_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/dialog_chapter_back_txt"
        android:textColor="@color/white"
        android:textSize="16sp" />
</RelativeLayout>