<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:weightSum="11">

        <TextView
            android:id="@+id/dialog_password_find_target_txt"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_weight="2"
            android:text="@string/dialog_password_find_target_txt"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dialog_password_find_progress_txt"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:layout_weight="2"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/dialog_password_find_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="3"
            android:hint="@string/dialog_password_find_edit_hint_txt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="4"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/dialog_password_find_confirm_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_custom_edit_info_dialog"
                android:text="@string/dialog_password_find_confirm_txt"
                android:textColor="@color/colorPrimary" />


            <Button
                android:id="@+id/dialog_password_find_cancel_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_custom_edit_info_dialog"
                android:text="@string/dialog_password_find_cancel_txt"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>