<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_background_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/intro_background" />

    <android.support.v4.view.ViewPager
        android:id="@+id/login_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v4.view.ViewPager>

    <com.pixelcan.inkpageindicator.InkPageIndicator
        android:id="@+id/login_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_btn_layout"
        android:layout_marginBottom="32dp"
        app:animationDuration="320"
        app:currentPageIndicatorColor="@color/colorPrimary"
        app:dotDiameter="8dp"
        app:dotGap="8dp"
        app:pageIndicatorColor="@color/colorAccent" />

    <LinearLayout
        android:id="@+id/login_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/login_google_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom_login"
            android:orientation="horizontal"
            android:padding="8dp"
            >

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/login_google_icon"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/login_google_txt"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_facebook_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_custom_login"
            android:orientation="horizontal"
            android:padding="8dp"
            >

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/login_facebook_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/login_facebook_txt"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

            <TextView
                android:id="@+id/login_email_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_email_txt"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                />

    </LinearLayout>

</RelativeLayout>